feat: local fonts & post layout & fixes

--- a/src/content/posts/realistic-blur-css.mdx
+++ b/src/content/posts/realistic-blur-css.mdx
@@ -13,8 +13,6 @@ This is a list in markdown:
 - Three
 
 ```typescript
-type Test = {
-	name: string;
-	age: number;
-};
+const test = 'fedeleco';
+const doThis = () => 'this';
 ```
